@@ -1,5 +1,7 @@
 = HEAD
 
+* Support :heartbeat option to not_found plugin (jeremyevans)
+
 * Support :serializer option in json plugin (janko-m) (#21)
 
 * Add json_parser plugin, for parsing request bodies in JSON format (jeremyevans)
